kubeflow/helm/pipelines/upstream-1.8/longformat/cache-deployer-deployment_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache-deployer
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: cache-deployer-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-deployer
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cache-deployer
        app.kubernetes.io/component: ml-pipeline
        app.kubernetes.io/name: kubeflow-pipelines
        application-crd-id: kubeflow-pipelines
    spec:
      containers:
        - env:
            - name: NAMESPACE_TO_WATCH
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: gcr.io/ml-pipeline/cache-deployer:1.8.5
          imagePullPolicy: Always
          name: main
      restartPolicy: Always
      serviceAccountName: kubeflow-pipelines-cache-deployer-sa
