kubeflow/helm/pipelines/upstream-1.8/longformat/mysql_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
    application-crd-id: kubeflow-pipelines
  name: mysql
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: mysql
      application-crd-id: kubeflow-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        application-crd-id: kubeflow-pipelines
    spec:
      containers:
        - args:
            - --ignore-db-dir=lost+found
            - --datadir
            - /var/lib/mysql
          image: gcr.io/ml-pipeline/mysql:5.7-debian
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: 100m
              memory: 800Mi
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      serviceAccountName: mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
