kubeflow/helm/pipelines/upstream-1.8/longformat/metadata-grpc-service_Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metadata
    application-crd-id: kubeflow-pipelines
  name: metadata-grpc-service
  namespace: kubeflow
spec:
  ports:
    - name: grpc-api
      port: 8080
      protocol: TCP
  selector:
    application-crd-id: kubeflow-pipelines
    component: metadata-grpc-server
  type: ClusterIP
