kubeflow/helm/pipelines/upstream-1.8/longformat/ml-pipeline-ui_AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
  selector:
    matchLabels:
      app: ml-pipeline-ui
